# cns-nvmeof-ts

./: .dir-locals.el  .hgignore  LICENSE  README.md  log.sh
conf/: builder.conf.local  builder.conf.target  cs.conf.bond  cs.conf.local_nvme  cs.conf.tools  env.bond  env.nullblock  env.tools  logger.conf  opts.aggregation  opts.common  opts.kvm  opts.wires  rcf.conf  script.agents  script.behaviour  script.trc-tags  tester.conf  trc.xml
conf/aggregation/: cs.conf.inc.slave1  cs.conf.inc.slave2  cs.conf.inc.slave3  cs.conf.inc.slave4
conf/matrices/: opts.matrix.fast  opts.matrix.mutli.debug  opts.matrix.nightly  opts.matrix.perf  opts.matrix.stability  opts.matrix.weekend
conf/trc/: trc-nvmeof-ts-conf.xml  trc-nvmeof-ts-data.xml  trc-nvmeof-ts-perf.xml  trc-nvmeof-ts-stability.xml
nvmeof-ts/: Doxyfile  Makefile.am  configure.ac  mainpage.dox  meson.build  meson_options.txt  package.xml  prologue.c  style.css
nvmeof-ts/conf/: Makefile.am  connect.c  list.c  meson.build  nvmecmd.c  package.dox  package.xml
nvmeof-ts/data/: Makefile.am  fio_pattern.c  meson.build  package.dox  package.xml
nvmeof-ts/dox_resources/: run.dox
nvmeof-ts/lib/: Makefile.am  meson.build  nvmeof_test.h  nvmeof_ts.c  tsapi_opts.c  tsapi_opts.h  tsapi_sysstat.c  tsapi_sysstat.h
nvmeof-ts/perf/: Makefile.am  fio_multi.c  fio_simple.c  meson.build  package.dox  package.xml
nvmeof-ts/stability/: Makefile.am  fio_disconnparallel.c  fio_dupconn.c  fio_multi_stability.c  fio_parallel_traffic.c  fio_reconnect.c  fio_stability.c  fio_updown.c  meson.build  onvme_kill.c  package.dox  package.xml
scripts/: cfg-check.sh  deploy.sh  gen_doxygen  html-log.sh  log.sh  perf.py  run.sh
